# nepdate-cli

./: CMakeLists.txt  Cargo.toml  README.md  cmake_uninstall.cmake.in
.github/workflows/: main.yml  test.yml
debian/: changelog  control  copyright  watch
debian/upstream/: metadata
nepdate-test-app/: Cargo.toml
src/: CMakeLists.txt  bikram.h  bikram.rs  main.cpp  main.rs  precomputed_data.rs
